# mmpi_test_key_verisi_olusturucu

./: README.md  add_test_data.py  app.py  generated_keys.json  init_db.py  mmpi_sorular.csv  models.py  requirements.txt  scoring.py  setup.cfg  train_ai.py
instance/: gercek_veri.db  mmpi_data.db
templates/: index.html  result.html  result_real.html  test.html  test_calibration.html  test_mmpi.html
