[metadata]
name = mmpi-turkiye
version = 1.0.0
description = MMPI (Minnesota Multiphasic Personality Inventory) testini uygulayan ve yapay zeka ile analiz eden web uygulaması
author = MMPITurkiye Geliştirici Ekibi
author_email = info@mmpiturkiye.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmpiturkiye/mmpiturkiye
project_urls =
    Bug Tracker = https://github.com/mmpiturkiye/mmpiturkiye/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Flask>=2.0.0
    Flask-SQLAlchemy>=3.0.0
    pandas>=1.5.0
    scipy>=1.10.0
    numpy>=1.24.0

[options.extras_require]
dev =
    pytest>=6.0
    black>=22.0
    flake8>=4.0
test =
    pytest>=6.0
    pytest-cov>=3.0

[options.entry_points]
console_scripts =
    mmpi-turkiye = app:main

[bdist_wheel]
universal = 1